--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -9,4 +9,5 @@
 @import "partials/main";
 @import "partials/face-to-face";
 @import "partials/create-tournament";
+@import "partials/upload-games";
 @import "partials/api";
