--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -945,6 +945,39 @@ form .form-row input {
   margin-top: 1rem;
 }
 
+#uploadGamesForm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 auto 1rem auto;
+  padding: 0 0.5rem;
+}
+#uploadGamesForm .form__container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: aqua;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 1rem auto 0 auto;
+  width: 100%;
+}
+#uploadGamesForm .form__container option {
+  margin: 1rem 0;
+}
+
 body {
   background-color: bisque;
 }/*# sourceMappingURL=styles.css.map */
