--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -12,19 +12,16 @@
             <nav class="nav">
                 <ul id="nav__list" class="nav__list">
                     <li id="" class="nav__list-option">
-                        <a class="nav__list-option-link">Link</a>
+                        <a class="nav__list-option-link" href="./login">Login</a>
                     </li>
                     <li id="" class="nav__list-option">
-                        <a class="nav__list-option-link">Link</a>
+                        <a class="nav__list-option-link" href="./create-tournament">Crear torneo</a>
                     </li>
                     <li id="" class="nav__list-option">
-                        <a href="" target="_blank" class="nav__list-option-link" id="meditaciones">Link</a>
+                        <a class="nav__list-option-link" href="./upload-games">Cargar partidos</a>
                     </li>
                     <li id="" class="nav__list-option">
-                        <a class="nav__list-option-link">Link</a>
-                    </li>
-                    <li id="" class="nav__list-option">
-                        <a href="" class="nav__list-option-link">Link</a>
+                        <a class="nav__list-option-link" href="./face-to-face">Mano a mano</a>
                     </li>
                 </ul>
             </nav>
