--- a/public/views/login-error.ejs
+++ b/public/views/login-error.ejs
@@ -1,9 +1,11 @@
 <%- include('./partials/header')-%>
-    <div class="container text-center my-3">
-        <div class="jumbotron" style="background-color: salmon;color: white;">
-            <h1>USER ERROR LOGIN</h1>
 
-            <button class="btn btn-warning my-5" onclick="location.href='/'">VOLVER</button>
+    <body>
+        <div class="container text-center my-3">
+            <div class="jumbotron" style="background-color: salmon;color: white;">
+                <h1>USER ERROR LOGIN</h1>
+
+                <button class="btn btn-warning my-5" onclick="location.href='/'">VOLVER</button>
+            </div>
         </div>
-    </div>
-    <%- include('./partials/footer')-%>
+        <%- include('./partials/footer')-%>
