--- a/public/views/create-tournament.ejs
+++ b/public/views/create-tournament.ejs
@@ -1,11 +1,13 @@
 <%- include('./partials/header')-%>
 
     <body>
-        <form id="confirm-countries" class="form needs-validation" novalidate autocomplete="off">
-            <span>Por favor, confirme los países de los equipos a utilizar: </span>
+        <form id="confirm-countries" class="form" autocomplete="off">
+            <span>Por favor, confirme los países de los equipos a utilizar (clubes) o elija "internacional" en caso de
+                emplear combinados nacionales: </span>
             <div class="form__container">
                 <div class="form-check">
-                    <input name="DE" class="form-check-input" type="checkbox" value="Germany" id="DE">
+                    <input name="DE" class="form-check-input form-check-input-countries" type="checkbox" value="Germany"
+                        id="DE">
                     <label class="form-check-label" for="inputID">
                         Alemania
                     </label>
@@ -14,47 +16,69 @@
                     <label class="form-check-label" for="inputID">
                         Argentina
                     </label>
-                    <input name="AR" class="form-check-input" type="checkbox" value="Argentina" id="AR">
+                    <input name="AR" class="form-check-input form-check-input-countries" type="checkbox"
+                        value="Argentina" id="AR">
 
                 </div>
                 <div class="form-check">
-                    <input name="BR" class="form-check-input" type="checkbox" value="Brazil" id="BR">
+                    <input name="BR" class="form-check-input form-check-input-countries" type="checkbox" value="Brazil"
+                        id="BR">
                     <label class="form-check-label" for="inputID">
                         Brasil
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label" for="inputID">
-                        España
+                        Dinamarca
                     </label>
-                    <input name="SP" class="form-check-input" type="checkbox" value="Spain" id="SP">
+                    <input name="DK" class="form-check-input form-check-input-countries" type="checkbox" value="Denmark"
+                        id="DK">
                 </div>
                 <div class="form-check">
-                    <input name="FR" class="form-check-input" type="checkbox" value="France" id="FR">
+                    <input name="SP" class="form-check-input form-check-input-countries" type="checkbox" value="Spain"
+                        id="SP">
+                    <label class="form-check-label" for="inputID">
+                        España
+                    </label>
+                </div>
+                <div class="form-check">
                     <label class="form-check-label" for="inputID">
                         Francia
                     </label>
+                    <input name="FR" class="form-check-input form-check-input-countries" type="checkbox" value="France"
+                        id="FR">
                 </div>
                 <div class="form-check">
+                    <input name="GR" class="form-check-input form-check-input-countries" type="checkbox" value="Greece"
+                        id="GR">
                     <label class="form-check-label" for="inputID">
                         Grecia
                     </label>
-                    <input name="GR" class="form-check-input" type="checkbox" value="Greece" id="GR">
                 </div>
                 <div class="form-check">
-                    <input name="NL" class="form-check-input" type="checkbox" value="Netherlands" id="NL">
                     <label class="form-check-label" for="inputID">
                         Holanda
                     </label>
+                    <input name="NL" class="form-check-input form-check-input-countries" type="checkbox"
+                        value="Netherlands" id="NL">
                 </div>
                 <div class="form-check">
+                    <input name="GB" class="form-check-input form-check-input-countries" type="checkbox" value="England"
+                        id="GB">
                     <label class="form-check-label" for="inputID">
                         Inglaterra
                     </label>
-                    <input name="GB" class="form-check-input" type="checkbox" value="England" id="GB">
                 </div>
                 <div class="form-check">
-                    <input name="IT" class="form-check-input" type="checkbox" value="Italy" id="IT">
+                    <label class="form-check-label" for="inputID">
+                        Internacional
+                    </label>
+                    <input name="nations" class="form-check-input form-check-input-countries" type="checkbox"
+                        value="nations" id="nations">
+                </div>
+                <div class="form-check">
+                    <input name="IT" class="form-check-input form-check-input-countries" type="checkbox" value="Italy"
+                        id="IT">
                     <label class="form-check-label" for="inputID">
                         Italia
                     </label>
@@ -63,10 +87,12 @@
                     <label class="form-check-label" for="inputID">
                         Portugal
                     </label>
-                    <input name="PT" class="form-check-input" type="checkbox" value="Portugal" id="PT">
+                    <input name="PT" class="form-check-input form-check-input-countries" type="checkbox"
+                        value="Portugal" id="PT">
                 </div>
                 <div class="form-check">
-                    <input name="RU" class="form-check-input" type="checkbox" value="Russia" id="RU">
+                    <input name="RU" class="form-check-input form-check-input-countries" type="checkbox" value="Russia"
+                        id="RU">
                     <label class="form-check-label" for="inputID">
                         Rusia
                     </label>
@@ -75,10 +101,8 @@
                     <label class="form-check-label" for="inputID">
                         Turquía
                     </label>
-                    <input name="TR" class="form-check-input" type="checkbox" value="Turkey" id="TR">
-                </div>
-                <div class="invalid-feedback">
-                    You must agree before submitting.
+                    <input name="TR" class="form-check-input form-check-input-countries" type="checkbox" value="Turkey"
+                        id="TR">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Confirmar países</button>
@@ -91,31 +115,36 @@
             <div class="form__container">
                 <span>¿Qué jugadores humanos participarán del torneo?</span>
                 <div class="form-check">
-                    <input name="firstPlayer" class="form-check-input" type="checkbox" value="Leo" id="">
+                    <input name="firstPlayer" class="form-check-input form-check-input-players" type="checkbox"
+                        value="Leo" id="">
                     <label class="form-check-label" for="inputID">
                         Leo
                     </label>
                 </div>
                 <div class="form-check">
-                    <input name="secondPlayer" class="form-check-input" type="checkbox" value="Lucho" id="">
+                    <input name="secondPlayer" class="form-check-input form-check-input-players" type="checkbox"
+                        value="Lucho" id="">
                     <label class="form-check-label" for="inputID">
                         Lucho
                     </label>
                 </div>
                 <div class="form-check">
-                    <input name="thirdPlayer" class="form-check-input" type="checkbox" value="Max" id="">
+                    <input name="thirdPlayer" class="form-check-input form-check-input-players" type="checkbox"
+                        value="Max" id="">
                     <label class="form-check-label" for="inputID">
                         Max
                     </label>
                 </div>
                 <div class="form-check">
-                    <input name="fourthPlayer" class="form-check-input" type="checkbox" value="Nico" id="">
+                    <input name="fourthPlayer" class="form-check-input form-check-input-players" type="checkbox"
+                        value="Nico" id="">
                     <label class="form-check-label" for="inputID">
                         Nico
                     </label>
                 </div>
                 <div class="form-check">
-                    <input name="fifthPlayer" class="form-check-input" type="checkbox" value="Santi" id="">
+                    <input name="fifthPlayer" class="form-check-input form-check-input-players" type="checkbox"
+                        value="Santi" id="">
                     <label class="form-check-label" for="inputID">
                         Santi
                     </label>
@@ -125,4 +154,5 @@
             <div id="confirmationButton"></div>
         </form>
         <script src="js/create-tournament.js"></script>
+
         <%- include('./partials/footer')-%>
