--- a/public/views/face-to-face.ejs
+++ b/public/views/face-to-face.ejs
@@ -8,61 +8,80 @@
                 <div>Hola, NO hay emparejamientos</div>
                 <% } %>
 
-                    <div class="container_table">
-                        <div class="row">
-                            <div class="column">
-                                <div class="cell">Enfrentamientos</div>
-                                <%finalMatchups.forEach(function(element, index) {%>
-                                    <div class="cell">
-                                        <%=element.matchup%>
-                                    </div>
-                                    <%});%>
-                            </div>
-                            <div class="column">
-                                <div class="cell">Partidos jugados</div>
-                                <%finalMatchups.forEach(function(element, index) {%>
-                                    <div class="cell">
-                                        <%=element.matches.length%>
-                                    </div>
-                                    <%});%>
-                            </div>
-                            <div class="column">
-                                <div class="cell">Victorias (J1)</div>
-                                <%finalMatchups.forEach(function(element, index) {%>
-                                    <div class="cell">
-                                        <%=element.wonByP1%>
-                                    </div>
-                                    <%});%>
-                            </div>
-                            <div class="column">
-                                <div class="cell">Empates</div>
-                                <%finalMatchups.forEach(function(element, index) {%>
-                                    <div class="cell">
-                                        <%=element.draws%>
-                                    </div>
-                                    <%});%>
-                            </div>
-                            <div class="column">
-                                <div class="cell">Victorias (J2)</div>
-                                <%finalMatchups.forEach(function(element, index) {%>
-                                    <div class="cell">
-                                        <%=element.wonByP2%>
-                                    </div>
-                                    <%});%>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container_matches">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Mano a mano</th>
+                                <th scope="col">PJ</th>
+                                <th scope="col">PG (J1)</th>
+                                <th scope="col">PE</th>
+                                <th scope="col">PG (J2)</th>
+                                <th scope="col">GF (J1)</th>
+                                <th scope="col">GF (J2)</th>
+                                <th scope="col">DIF</th>
+                                <th scope="col">Equipo + ganador</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% for (i=0; i < finalMatchups.length ; i++) { %>
+                                <tr>
+                                    <td>
+                                        <%=finalMatchups[i].matchup%>
+                                    </td>
+                                    <td>
+                                        <%=finalMatchups[i].matches.length%>
+                                    </td>
+                                    <td>
+                                        <%=finalMatchups[i].wonByP1%>
+                                    </td>
+                                    <td>
+                                        <%=finalMatchups[i].draws%>
+                                    </td>
+                                    <td>
+                                        <%=finalMatchups[i].wonByP2%>
+                                    </td>
+                                    <td>
+                                        -
+                                    </td>
+                                    <td>
+                                        -
+                                    </td>
+                                    <td>
+                                        -
+                                    </td>
+                                    <td>
+                                        -
+                                    </td>
+                                </tr>
+                                <%};%>
+                        </tbody>
+                    </table>
 
-                        <%allMatches.forEach(function(element, index) {%>
+                    <% if(allTournaments.length> 0){ %>
+                        <ul>
+                            <%allTournaments.forEach(function(element, index) {%>
+                                <li class="">
+                                    <a href="./face-to-face?id=<%=element.id%>">Ver estadísticas de "
+                                        <%=element.name%>"
+                                    </a>
+                                </li>
+                                <%});%>
+                        </ul>
+                        <% } else{ %>
+                            <div>Hola, NO hay torneos</div>
+                            <% } %>
 
-                            <div class="match">
-                                <%=element.teamP1%> (<%=element.playerP1%>) <%=element.scoreP1%> vs <%=element.scoreP2%>
-                                                (
-                                                <%=element.playerP2%>) <%=element.teamP2%>
-                            </div>
+                                <div class="container_matches">
 
-                            <%});%>
-                    </div>
+                                    <%allMatches.forEach(function(element, index) {%>
 
-                    <%- include('./partials/footer')-%>
+                                        <div class="match">
+                                            <%=element.teamP1%> (<%=element.playerP1%>) <%=element.scoreP1%> vs
+                                                        <%=element.scoreP2%>
+                                                            (<%=element.playerP2%>) <%=element.teamP2%>
+                                        </div>
+
+                                        <%});%>
+                                </div>
+
+                                <%- include('./partials/footer')-%>
