--- a/public/views/tournament-selection.ejs
+++ b/public/views/tournament-selection.ejs
@@ -8,8 +8,7 @@
                 <div>Hola, NO hay torneos</div>
                 <% } %>
 
-                    <form class="form needs-validation" novalidate id="uploadGamesForm" action="/upload-games"
-                        method="post" autocomplete="off">
+                    <form class="form" id="uploadGamesForm" action="/upload-games" method="post" autocomplete="off">
                         <div class="form__container">
                             <label>
                                 Seleccione el torneo:
